--- a/src/app/components/users/edit-user/edit-user.component.html
+++ b/src/app/components/users/edit-user/edit-user.component.html
@@ -1,8 +1,19 @@
 <div class="container my-5">
-  <h1 class="mb-3">Add New User</h1>
+  <h1 class="mb-3">Edit User</h1>
   <div class="row">
     <div class="col-6">
-      <form #form="ngForm" (ngSubmit)="addUser()">
+      <form #form="ngForm" (ngSubmit)="updateUser()">
+        <div class="mb-3">
+          <label for="name" class="form-label">Id</label>
+          <input
+            type="text"
+            class="form-control"
+            id="id"
+            name="id"
+            [(ngModel)]="userDetails.id"
+            readonly
+          />
+        </div>
         <div class="mb-3">
           <label for="name" class="form-label">Name</label>
           <input
@@ -10,7 +21,7 @@
             class="form-control"
             id="name"
             name="name"
-            [(ngModel)]="addUserRequest.name"
+            [(ngModel)]="userDetails.name"
           />
         </div>
         <div class="mb-3">
@@ -20,7 +31,7 @@
             class="form-control"
             id="surname"
             name="surname"
-            [(ngModel)]="addUserRequest.surname"
+            [(ngModel)]="userDetails.surname"
           />
         </div>
         <div class="mb-3">
@@ -30,21 +41,28 @@
             class="form-control"
             id="email"
             name="email"
-            [(ngModel)]="addUserRequest.email"
+            [(ngModel)]="userDetails.email"
           />
         </div>
-
+        <label for="password" class="form-label">Password</label>
         <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
           <input
             type="text"
             class="form-control"
             id="password"
             name="password"
+            [(ngModel)]="userDetails.password"
           />
         </div>
-
-        <button type="submit" class="btn btn-success">Save</button>
+        
+        <button type="submit" class="btn btn-success">Edit</button>
+        <button
+          type="button"
+          class="btn btn-danger"
+          (click)="deleteUser(userDetails.id)"
+        >
+          Delete
+        </button>
       </form>
     </div>
   </div>
