--- a/src/app/components/users/users-list/users-list.component.html
+++ b/src/app/components/users/users-list/users-list.component.html
@@ -7,6 +7,7 @@
         <th>Name</th>
         <th>Surname</th>
         <th>Email</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -15,6 +16,7 @@
         <td>{{ user.name }}</td>
         <td>{{ user.surname }}</td>
         <td>{{ user.email }}</td>
+        <td><a [routerLink]="['/users', 'edit', user.id]">View</a></td>
       </tr>
     </tbody>
   </table>
